fix: do not display zoom on mobile

--- a/catalog/view/theme/melle/stylesheet/sass/_product.scss
+++ b/catalog/view/theme/melle/stylesheet/sass/_product.scss
@@ -258,8 +258,20 @@
   }
   .product-images {
     width: 100%;
+    .product-image-raw {
+      display: inline-block;
+    }
+    .zoomed-container {
+      display: none;
+    }
     @media (min-width: 1200px) {
       width: 75%;
+      .product-image-raw {
+        display: none;
+      }
+      .zoomed-container {
+        display: block;
+      }
     }
   }
 }
